<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomePage">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/user"
            app:layout_constraintTop_toBottomOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/account"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/username"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline1"
            app:layout_constraintStart_toEndOf="@id/imageView1" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recently_watched"
            android:layout_marginStart="25dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/textview1"  />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>